<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".AddOrEditActivity">

    <TextView
        android:id="@+id/ActivityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/ActivityAddOrEditObject_UID"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="product name"
                android:ems="10"
                android:hint="@string/ActivityAddOrEditObjectNameHint"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/descriptionTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="product name"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/latitudeTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="product name"
                android:ems="10"
                android:hint="@string/latitude"
                android:inputType="numberSigned|number"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/longtitudeTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="product name"
                android:ems="10"
                android:hint="@string/longtitude"
                android:inputType="numberSigned|number"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/radiusTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="product name"
                android:ems="10"
                android:hint="@string/radius"
                android:inputType="numberSigned|number"
                android:minHeight="48dp" />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/ActivityAddOrEditDeleteButton"
            android:onClick="buAcDelete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/space"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/ActivityAddOrEditSaveButton"
            android:onClick="buAcSave"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/space"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>